test/errors/type/list/join2.yasl
mt.lookup([], .join)(1, true)
